--- a/_config.yml
+++ b/_config.yml
@@ -80,7 +80,7 @@ analytics:
 
 # Site Author
 author:
-  name             : "junteng liu (刘军腾)"
+  name             : "junteng liu "
   avatar           : "profile.png"
   bio              : "third-year student in SJTU"
   location         : "Location"
