--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "junteng liu "
-  avatar           : "profile.png"
+  avatar           : "profile.jpg"
   bio              : "third-year student in SJTU"
   location         : "Location"
   employer         :
