--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Junteng Liu "
   avatar           : "profile.jpg"
-  bio              : "third-year student in SJTU"
+  bio              : "Final-year student in SJTU  Incoming PHD in HKUST"
   location         : "Location"
   employer         :
   pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
